--- a/src/app/components/comment-card/comment-card.component.html
+++ b/src/app/components/comment-card/comment-card.component.html
@@ -14,7 +14,8 @@
   </div>
 
   <button class="btn btn-dark"
-          [routerLink]="['', 0]">
+          [routerLink]="['comment']"
+          [queryParams]="{id: comment.id}">
     <mat-icon>edit</mat-icon>
   </button>
 
