--- a/src/app/components/comment-card/comment-card.component.html
+++ b/src/app/components/comment-card/comment-card.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="comment-content">
-    <small [innerHTML]="comment.text"></small>
+    <small commentText [textHTML]="comment.text"></small>
   </div>
 
   <div class="comment-tags">
